--- a/KovscekWagner_MP3.Rmd
+++ b/KovscekWagner_MP3.Rmd
@@ -128,26 +128,14 @@ lasso.coef2 <- predict(cv.out, s = bestlam2,
 bestlam2
 lasso.coef2
 ```
-```{r}
-#determine which lambda to use
-MSE_lassoMin <- mean((y - lasso.pred1)^2)
-RMSE_lassoMin <- sqrt(MSE_lassoMin)
-RMSE_lassoMin
 
-MSE_lasso1se <- mean((y - lasso.pred2)^2)
-RMSE_lasso1se <- sqrt(MSE_lasso1se)
-RMSE_lasso1se
-```
-
-NEED TO CHANGE THIS SO NOT COMPARING RMSE?!
 Discussion on which Value of Lambda was Selected:
 
-The value of lambda that I chose was 2.379934, the min lambda. This lambda had a smaller RMSE value than the lambda found using 1se. It had an RMSE of 692.8955 which is smaller than 838.7051, which is good since we are looking for the smallest RMSE. 
-
+The value of lambda that we chose was 300.3136, the 1se lambda. The minimum lambda did not get rid of any variables. Since the 1se lambda reduced the feature space, we chose that one. 
 
 The Estimated Equation for LASSO:
 
-lm(formula = Score ~ TotalXP + Eliminations + Deaths + Damage + XPType + Win, data = tdm)
+$$\hat{y}_i = 5.057312e+02 + 2.323181e-03 x_{i,1} + 1.630272e+02 x_{i,2}$$
 
 ```{r}
 #set.seed
@@ -170,8 +158,7 @@ regression_model
 
 The Estimated Equation for Backwards Elimination: 
 
-lm(formula = Score ~ TotalXP + Eliminations + Deaths + XPType + Win, data = tdm)
-
+$$\hat{y}_i = 944.05302 + 0.06054 x_{i,1} + 185.24081 x_{i,2} - 73.25104 x_{i,3} - 367.94000 x_{i, 4} - 454.44701 x_{i, 5}$$
 
 Comparison of the results of LASSO with the results of Backwards Elimination:
 
@@ -207,3 +194,6 @@ How Does this Compare to the Regression Tree:
 
 Damage, Eliminations, and TotalXP were the three most important variables from the regression tree, but the linear regression model based on backwards elimination showed Deaths, Eliminations, and TotalXP as the most important variables. The only difference is that the regression tree included Damage, but the regression model based on backwards elimination included Deaths instead. 
 
+## Discussion of Group Participation
+
+In this project, Nathanael and I did an even split of the work. He did task 1 and part b in task 2 and I did part a and c in task 2. To do this effectively, we met at several points in the process to discuss the questions and the distribution of work. We both found this distribution of work to be effective and would do something similar in the future. 
