--- a/KovscekWagner_MP3.Rmd
+++ b/KovscekWagner_MP3.Rmd
@@ -16,10 +16,12 @@ remove(list = ls())
 library(tidyverse)
 library(ggplot2)
 library(lubridate)
-
+library(rpart)
+library(rattle)
+library(glmnet)
 #Part 1
 library(readxl)
-CODGames2_mp <- read_excel("data/CODGames2_mp.xlsx")
+CODGames2_mp <- read_excel("C:/Users/Grace Wagner/Downloads/CODGames2_mp.xlsx")
 ```
 
 ## Task 1
@@ -43,7 +45,6 @@ Now that this is done, let's see what the distribution of TotalXP is in Full Gam
 ```{r}
 ggplot(full_games, mapping = aes(x = XPType, y = TotalXP)) +
   geom_boxplot()
-
 ```
 
 This shown, it is much more favorable for the user to have the Double XP + 10% XPType than the 10% Boost type. The user's totalXP median earning is approximately 6000 more than it otherwise would be. Additionally, the interquartile range for Double XP + 10% is larger and there are more outliers on the high end than there is for 10% Boost type.
@@ -60,6 +61,7 @@ I'm not sure if this is more or less surprising given what we know about the gam
 
 
 ## Task 2
+
 ```{r}
 tdm <- full_games %>% 
   filter(GameType == "HC - TDM") %>% 
@@ -165,6 +167,14 @@ Comparison of the results of LASSO with the results of Backwards Elimination:
 The difference between the two results is that the LASSO results based on the minimum lambda value didn't remove any of the variables. The backwards elimination got rid of the Damage variable from the equation, unlike LASSO. 
 
 ##2b
+```{r}
+res <- rpart(Score ~ TotalXP + Eliminations + Deaths + Damage + XPType + Win, method="anova", data=tdm,
+             minbucket=15)
+#Create plot using fancyRpartPlot for rattle library
+fancyRpartPlot(res, cex=0.8)
+```
+The variables with the three highest importance values are Damage (`r res[["variable.importance"]][["Damage"]]`), Eliminations (`r res[["variable.importance"]][["Eliminations"]]`), and TotalXP (`r res[["variable.importance"]][["TotalXP"]]`)
+
 ##2c
 ```{r}
 #Create Indictor(s) for XPType
